1. Added support for log4j1.x API 2. Added LocalizedMessage 3. When adding appenders, filters, or changing additivty on a Logger with no LoggerConfig, a new LoggerConfig is created and all Loggers are updated. Note that these are not operations that can be performed using the API but are done in the Log4j1.x Logger and in unit tests.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/branches/BRANCH_2_0_EXPERIMENTAL/rgoers@946745 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j12-api/pom.xml
+++ b/log4j12-api/pom.xml
@@ -28,13 +28,22 @@
   <packaging>jar</packaging>
   <name>Log4J Compatibility API</name>
   <description>The Log4J Compatibility API</description>
-</build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.3.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging</groupId>
+      <artifactId>log4j2-api</artifactId>
+      <version>1.99.0-SNAPSHOT</version>
+    </dependency>
+     <dependency>
+      <groupId>org.apache.logging</groupId>
+      <artifactId>log4j2-core</artifactId>
+      <version>1.99.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
  <distributionManagement>
