Code review comments using @issue, @doubt and @compare
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/branches/BRANCH_2_0_EXPERIMENTAL/rgoers@948306 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j2-api/pom.xml
+++ b/log4j2-api/pom.xml
@@ -28,6 +28,34 @@
   <packaging>jar</packaging>
   <name>Log4J API</name>
   <description>The Log4J API</description>
+  <reporting>
+     <plugins>
+	<plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-javadoc-plugin</artifactId>
+           <version>2.7</version>
+           <configuration>
+               <tags>
+                   <tag>
+                      <name>issue</name>
+                      <placement>a</placement>
+                      <head>JIRA issue:</head>
+                   </tag>
+                   <tag>
+                      <name>doubt</name>
+                      <placement>a</placement>
+                      <head>Troublesome:</head>
+                   </tag>
+                   <tag>
+                      <name>compare</name>
+                      <placement>a</placement>
+                      <head>Compare with:</head>
+                   </tag>
+               </tags>
+           </configuration>
+	</plugin>
+     </plugins>
+  </reporting>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
