--- a/log4j2-core/pom.xml
+++ b/log4j2-core/pom.xml
@@ -41,11 +41,17 @@
       <artifactId>log4j2-api</artifactId>
       <version>1.99.0-SNAPSHOT</version>
     </dependency>
-	<dependency>
+	  <dependency>
       <groupId>oro</groupId>
       <artifactId>oro</artifactId>
       <version>2.0.8</version>
       <scope>test</scope>
+    </dependency>
+	  <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.4</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
