Enhance configuration so components aren't aware of Nodes. The only configuration classes components now need to be aware of are the annotations. Address a few of the @doubt issues
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/branches/BRANCH_2_0_EXPERIMENTAL/rgoers@1026837 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j2-core/pom.xml
+++ b/log4j2-core/pom.xml
@@ -26,7 +26,7 @@
   <groupId>org.apache.logging</groupId>
   <artifactId>log4j2-core</artifactId>
   <packaging>jar</packaging>
-  <name>Enhanced Pattern Layout Experiments</name>
+  <name>Log4J2 Core</name>
   <description>Experiments on Pattern Layout.</description>
   <url>http://logging.apache.org/log4j/experimental</url>
   <dependencies>
