--- a/log4j12-api/pom.xml
+++ b/log4j12-api/pom.xml
@@ -20,7 +20,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.logging</groupId>
-    <artifactId>log4j2</artifactId>
+    <artifactId>log4j2-rgoers</artifactId>
     <version>1.99.0-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.logging</groupId>
