--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.logging</groupId>
-  <artifactId>log4j2</artifactId>
+  <artifactId>log4j2-rgoers</artifactId>
   <packaging>pom</packaging>
   <name>Apache Log4j 2</name>
   <version>1.99.0-SNAPSHOT</version>
