--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,39 @@
     <name>Apache Software Foundation</name>
     <url>http://www.apache.org</url>
   </organization>
+  <properties>
+    <slf4j.version>1.6.1</slf4j.version>
+  </properties>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+       <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-ext</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging</groupId>
+        <artifactId>log4j2-api</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging</groupId>
+        <artifactId>log4j2-core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.3.1</version>
+        <scope>test</scope>
+    </dependency>
+    </dependencies>
+  </dependencyManagement>
   <build>
     <plugins>
       <plugin>
@@ -159,5 +192,6 @@
     <module>log4j2-api</module>
     <module>log4j12-api</module>
     <module>log4j2-core</module>
+    <module>slf4j-impl</module>
   </modules>
 </project>
