--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
   <packaging>pom</packaging>
   <name>Apache Log4j 2</name>
   <version>1.99.0-SNAPSHOT</version>
+  <parent>
+    <groupId>org.apache</groupId>
+    <artifactId>apache</artifactId>
+    <version>9</version>
+  </parent>
   <description>Apache Log4j 2</description>
   <url>http://logging.apache.org/log4j/2.0/</url>
   <issueManagement>
@@ -77,6 +82,7 @@
   </organization>
   <properties>
     <slf4j.version>1.6.1</slf4j.version>
+    <logback.version>0.9.28</logback.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -89,6 +95,16 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-ext</artifactId>
         <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.logging</groupId>
