Add support for Commons Logging. Cause SLF4J and JCL adapters to share  base Logger Context
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/branches/BRANCH_2_0_EXPERIMENTAL/rgoers@1125875 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -209,5 +209,6 @@
     <module>log4j12-api</module>
     <module>log4j2-core</module>
     <module>slf4j-impl</module>
+    <module>log4j2-jcl</module>
   </modules>
 </project>
