--- a/log4j12-api/pom.xml
+++ b/log4j12-api/pom.xml
@@ -40,10 +40,17 @@
       <artifactId>log4j2-api</artifactId>
       <version>1.99.0-SNAPSHOT</version>
     </dependency>
-     <dependency>
+    <dependency>
       <groupId>org.apache.logging</groupId>
       <artifactId>log4j2-core</artifactId>
       <version>1.99.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging</groupId>
+      <artifactId>log4j2-core</artifactId>
+      <version>1.99.0-SNAPSHOT</version>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
   </dependencies>
  <distributionManagement>
