--- a/log4j2-jcl/pom.xml
+++ b/log4j2-jcl/pom.xml
@@ -33,6 +33,12 @@
       <groupId>org.apache.logging</groupId>
       <artifactId>log4j2-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging</groupId>
+      <artifactId>log4j2-core</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 
