--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,18 @@
         <artifactId>log4j2-core</artifactId>
         <version>${project.version}</version>
       </dependency>
+       <dependency>
+        <groupId>org.apache.logging</groupId>
+        <artifactId>log4j2-core</artifactId>
+        <version>${project.version}</version>
+        <type>test-jar</type>
+      </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.3.1</version>
         <scope>test</scope>
-    </dependency>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
