--- a/slf4j-impl/pom.xml
+++ b/slf4j-impl/pom.xml
@@ -74,6 +74,12 @@
       <artifactId>log4j2-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.logging</groupId>
+      <artifactId>log4j2-core</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
