--- a/pom.xml
+++ b/pom.xml
@@ -116,11 +116,27 @@
         <artifactId>log4j2-core</artifactId>
         <version>${project.version}</version>
       </dependency>
-       <dependency>
+      <dependency>
         <groupId>org.apache.logging</groupId>
         <artifactId>log4j2-core</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging</groupId>
+        <artifactId>slf4j-impl</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging</groupId>
+        <artifactId>log4j2-jcl</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+ 	    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.4</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
