Fix for Log4j2-49
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/branches/BRANCH_2_0_EXPERIMENTAL/rgoers@1172182 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j2-core/pom.xml
+++ b/log4j2-core/pom.xml
@@ -60,6 +60,11 @@
       <scope>test</scope>
     </dependency>
      <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-ext</artifactId>
+      <scope>test</scope>
+    </dependency>
+     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.7</version>
