--- a/log4j2-jcl/pom.xml
+++ b/log4j2-jcl/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>log4j2-rgoers</artifactId>
-    <groupId>org.apache.logging</groupId>
+    <artifactId>log4j2</artifactId>
+    <groupId>org.apache.logging.rgoers</groupId>
     <version>1.99.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.logging</groupId>
+  <groupId>org.apache.logging.rgoers</groupId>
   <artifactId>log4j2-jcl</artifactId>
   <version>1.99.0-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -31,11 +31,11 @@
       <version>1.1.1</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging</groupId>
+      <groupId>org.apache.logging.rgoers</groupId>
       <artifactId>log4j2-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging</groupId>
+      <groupId>org.apache.logging.rgoers</groupId>
       <artifactId>log4j2-core</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
