--- a/slf4j-impl/pom.xml
+++ b/slf4j-impl/pom.xml
@@ -19,11 +19,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.logging</groupId>
-    <artifactId>log4j2-rgoers</artifactId>
+    <groupId>org.apache.logging.rgoers</groupId>
+    <artifactId>log4j2</artifactId>
     <version>1.99.0-SNAPSHOT</version>
   </parent>
-  <groupId>org.apache.logging</groupId>
+  <groupId>org.apache.logging.rgoers</groupId>
   <artifactId>slf4j-impl</artifactId>
   <packaging>jar</packaging>
   <name>SLF4J Binding</name>
@@ -41,15 +41,15 @@
       <artifactId>slf4j-ext</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging</groupId>
+      <groupId>org.apache.logging.rgoers</groupId>
       <artifactId>log4j2-api</artifactId>
     </dependency>
      <dependency>
-      <groupId>org.apache.logging</groupId>
+      <groupId>org.apache.logging.rgoers</groupId>
       <artifactId>log4j2-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging</groupId>
+      <groupId>org.apache.logging.rgoers</groupId>
       <artifactId>log4j2-core</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
