Start the architecture doc
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/branches/BRANCH_2_0_EXPERIMENTAL/rgoers@1184893 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -239,7 +239,7 @@
     </snapshotRepository>
     <site>
       <id>apache.website</id>
-      <url>scp://people.apache.org/www/logging.apache.org/log4j2</url>
+      <url>scp://people.apache.org/www/logging.apache.org/log4j/2.0</url>
     </site>
   </distributionManagement>
   <modules>
