Fix problems found by prepackaging plugins
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/branches/BRANCH_2_0_EXPERIMENTAL/rgoers@1196485 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j2-core/pom.xml
+++ b/log4j2-core/pom.xml
@@ -140,7 +140,7 @@
         <configuration>
           <mainClass>org.apache.logging.log4j.core.config.plugins.PluginManager</mainClass>
           <arguments>
-            <argument>Core,Lookup,ConfigurationFactory,Converter,FileConverter</argument>
+            <argument>${project.build.outputDirectory}</argument>
           </arguments>
         </configuration>
       </plugin>
