--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,8 @@
     <url>http://www.apache.org</url>
   </organization>
   <properties>
-    <slf4j.version>1.6.1</slf4j.version>
-    <logback.version>0.9.28</logback.version>
+    <slf4j.version>1.6.4</slf4j.version>
+    <logback.version>1.0.0</logback.version>
     <log4j.parent.dir>${basedir}</log4j.parent.dir>
   </properties>
   <dependencyManagement>
@@ -114,6 +114,12 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>${logback.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+        <type>test-jar</type>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.rgoers</groupId>
@@ -196,6 +202,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <version>3.0</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.wagon</groupId>
+            <artifactId>wagon-ssh</artifactId>
+            <version>1.0-beta-7</version>
+          </dependency>
+        </dependencies>
         <configuration>
           <!-- Exclude the navigation file for Maven 1 sites
                and the changes file used by the changes-plugin,
