--- a/log4j2-core/pom.xml
+++ b/log4j2-core/pom.xml
@@ -36,6 +36,18 @@
       <groupId>org.apache.logging.rgoers</groupId>
       <artifactId>log4j2-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
+      <version>1.9.2</version>
+      <optional>true</optional>
+     </dependency>
+     <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.2</version>
+      <optional>true</optional>
+    </dependency>
 	  <dependency>
       <groupId>oro</groupId>
       <artifactId>oro</artifactId>
