--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,42 @@
       </plugin> -->
     </plugins>
   </build>
+    <reporting>
+      <plugins>
+        <!-- Changes report -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-changes-plugin</artifactId>
+          <version>2.6</version>
+          <reportSets>
+            <reportSet>
+              <reports>
+                <report>changes-report</report>
+                <report>jira-report</report>
+              </reports>
+            </reportSet>
+          </reportSets>
+          <configuration>
+            <statusIds>Resolved, Closed</statusIds>
+            <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
+          </configuration>
+        </plugin>
+
+        <!-- Surefire report -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-report-plugin</artifactId>
+          <version>2.11</version>
+        </plugin>
+
+        <!-- RAT report -->
+        <plugin>
+          <groupId>org.apache.rat</groupId>
+          <artifactId>apache-rat-plugin</artifactId>
+          <version>0.8</version>
+        </plugin>
+      </plugins>
+    </reporting>
 
   <repositories>
     <repository>
