--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,12 @@
           <groupId>org.apache.rat</groupId>
           <artifactId>apache-rat-plugin</artifactId>
           <version>0.8</version>
+          <configuration>
+            <excludes>
+              <exclude>.idea/**/*</exclude>
+              <exclude>src/test/resources/**/*</exclude>
+            </excludes>
+          </configuration>
         </plugin>
       </plugins>
     </reporting>
