More Javadoc/Checkstyle fixes
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/branches/BRANCH_2_0_EXPERIMENTAL/rgoers@1225462 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,11 @@
             <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
           </configuration>
         </plugin>
-
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>2.4</version>
+        </plugin>
         <!-- Surefire report -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
