--- a/pom.xml
+++ b/pom.xml
@@ -232,59 +232,53 @@
       </plugin> -->
     </plugins>
   </build>
-    <reporting>
-      <plugins>
-        <!-- Changes report -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-changes-plugin</artifactId>
-          <version>2.6</version>
-          <reportSets>
-            <reportSet>
-              <reports>
-                <report>changes-report</report>
-                <report>jira-report</report>
-              </reports>
-            </reportSet>
-          </reportSets>
-          <configuration>
-            <statusIds>Resolved, Closed</statusIds>
-            <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>2.4</version>
-        </plugin>
-        <!-- Surefire report -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-report-plugin</artifactId>
-          <version>2.11</version>
-        </plugin>
+  <reporting>
+    <plugins>
+      <!-- Changes report -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-changes-plugin</artifactId>
+        <version>2.6</version>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>changes-report</report>
+              <report>jira-report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+        <configuration>
+          <statusIds>Resolved, Closed</statusIds>
+          <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.4</version>
+      </plugin>
+      <!-- Surefire report -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.11</version>
+      </plugin>
 
-        <!-- RAT report -->
-        <plugin>
-          <groupId>org.apache.rat</groupId>
-          <artifactId>apache-rat-plugin</artifactId>
-          <version>0.8</version>
-          <configuration>
-            <excludes>
-              <exclude>.idea/**/*</exclude>
-              <exclude>src/test/resources/**/*</exclude>
-            </excludes>
-          </configuration>
-        </plugin>
-      </plugins>
-    </reporting>
+      <!-- RAT report -->
+      <plugin>
+        <groupId>org.apache.rat</groupId>
+        <artifactId>apache-rat-plugin</artifactId>
+        <version>0.8</version>
+        <configuration>
+          <excludes>
+            <exclude>.idea/**/*</exclude>
+            <exclude>src/test/resources/**/*</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 
-  <repositories>
-    <repository>
-      <id>cloudera</id>
-      <url>https://repository.cloudera.com/content/repositories/releases/</url>
-    </repository>
-  </repositories>
   <distributionManagement>
      <repository>
       <id>apache.releases.https</id>
@@ -308,4 +302,25 @@
     <module>slf4j-impl</module>
     <module>log4j2-jcl</module>
   </modules>
+  <profiles>
+    <profile>
+      <id>include-flume</id>
+      <modules>
+        <module>log4j2-flume-og</module>
+        <module>log4j2-flume-ng</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>include-flume-ng</id>
+      <modules>
+        <module>log4j2-flume-ng</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>include-flume-og</id>
+      <modules>
+        <module>log4j2-flume-og</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
