--- a/log4j2-jcl/pom.xml
+++ b/log4j2-jcl/pom.xml
@@ -21,14 +21,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>log4j2</artifactId>
-    <groupId>org.apache.logging.rgoers</groupId>
-    <version>1.99.0-SNAPSHOT</version>
+    <groupId>org.apache.logging.log4j</groupId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.logging.rgoers</groupId>
+  <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j2-jcl</artifactId>
-  <version>1.99.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Log4J2 Commons Logging</name>
   <description>Log4j2 Commons Logging Adapter</description>
@@ -48,11 +47,11 @@
       <version>1.1.1</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.rgoers</groupId>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j2-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.rgoers</groupId>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j2-core</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
