--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.logging.rgoers</groupId>
+  <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j2</artifactId>
   <packaging>pom</packaging>
   <name>Apache Log4j 2</name>
-  <version>1.99.0-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
@@ -122,28 +122,28 @@
         <type>test-jar</type>
       </dependency>
       <dependency>
-        <groupId>org.apache.logging.rgoers</groupId>
+        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j2-api</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.logging.rgoers</groupId>
+        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j2-core</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.logging.rgoers</groupId>
+        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j2-core</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
       </dependency>
       <dependency>
-        <groupId>org.apache.logging.rgoers</groupId>
+        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>slf4j-impl</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.logging.rgoers</groupId>
+        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j2-jcl</artifactId>
         <version>${project.version}</version>
       </dependency>
