--- a/log4j2-jcl/pom.xml
+++ b/log4j2-jcl/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>log4j2</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-alpha1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
