--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <artifactId>log4j2</artifactId>
   <packaging>pom</packaging>
   <name>Apache Log4j 2</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-alpha1-SNAPSHOT</version>
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
@@ -92,6 +92,7 @@
     <slf4j.version>1.6.4</slf4j.version>
     <logback.version>1.0.0</logback.version>
     <log4j.parent.dir>${basedir}</log4j.parent.dir>
+    <Log4j2ReleaseVersion>1.0-alpha1</Log4j2ReleaseVersion>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -172,17 +173,22 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.2.1</version>
+          <version>2.2.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.7</version>
+          <version>2.9.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8.1-SNAPSHOT</version>
+          <version>2.8.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-pmd-plugin</artifactId>
+          <version>2.7.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -206,7 +212,7 @@
           <dependency>
             <groupId>org.apache.maven.wagon</groupId>
             <artifactId>wagon-ssh</artifactId>
-            <version>1.0-beta-7</version>
+            <version>2.2</version>
           </dependency>
         </dependencies>
         <configuration>
@@ -301,6 +307,7 @@
     <module>log4j2-core</module>
     <module>slf4j-impl</module>
     <module>log4j2-jcl</module>
+    <module>dist</module>
   </modules>
   <profiles>
     <profile>
@@ -321,6 +328,55 @@
       <modules>
         <module>log4j2-flume-og</module>
       </modules>
+    </profile>
+    <profile>
+      <id>release-notes</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-changes-plugin</artifactId>
+            <version>2.6</version>
+            <configuration>
+              <template>announcement.vm</template>
+              <templateDirectory>src/changes</templateDirectory>
+              <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
+              <outputDirectory>.</outputDirectory>
+              <announcementFile>RELEASE-NOTES.txt</announcementFile>
+              <announcementParameters>
+                <releaseVersion>${Log4j2ReleaseVersion}</releaseVersion>
+              </announcementParameters>
+            </configuration>
+            <executions>
+              <execution>
+                <id>create-release-notes</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>announcement-generate</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>apache-release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>source-release-assembly</id>
+                <configuration>
+                  <skipAssembly>true</skipAssembly>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
