--- a/slf4j-impl/pom.xml
+++ b/slf4j-impl/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j2</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-alpha1-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>slf4j-impl</artifactId>
