--- a/log4j2-api/pom.xml
+++ b/log4j2-api/pom.xml
@@ -20,11 +20,11 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j2</artifactId>
-    <version>1.0-alpha1-SNAPSHOT</version>
+    <artifactId>log4j</artifactId>
+    <version>2.0-alpha1-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j2-api</artifactId>
+  <artifactId>log4j-api</artifactId>
   <packaging>jar</packaging>
   <name>Log4J API</name>
   <description>The Log4J API</description>
