--- a/log4j2-core/pom.xml
+++ b/log4j2-core/pom.xml
@@ -20,21 +20,21 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j2</artifactId>
-    <version>1.0-alpha1-SNAPSHOT</version>
+    <artifactId>log4j</artifactId>
+    <version>2.0-alpha1-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j2-core</artifactId>
+  <artifactId>log4j-core</artifactId>
   <packaging>jar</packaging>
-  <name>Log4J2 Core</name>
-  <description>Log4j 2.0 Implementation.</description>
+  <name>Log4J Core</name>
+  <description>Log4 Implementation.</description>
   <properties>
     <log4j.parent.dir>${basedir}/..</log4j.parent.dir>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j2-api</artifactId>
+      <artifactId>log4j-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
