--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <description>Apache Log4j 2</description>
   <url>http://logging.apache.org/log4j/2.0/</url>
   <issueManagement>
-    <system>Jira</system>
+    <system>JIRA</system>
     <url>http://issues.apache.org/jira/browse/LOG4J2</url>
   </issueManagement>
   <ciManagement>
@@ -98,6 +98,7 @@
     <osgi.import>*</osgi.import>
     <osgi.dynamicImport />
     <osgi.private />
+    <pmd.plugin.version>2.7.1</pmd.plugin.version>
     <manifestfile>target/osgi/MANIFEST.MF</manifestfile>
     <maven.compile.source>1.5</maven.compile.source>
     <maven.compile.target>1.5</maven.compile.target>
@@ -202,7 +203,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
-          <version>2.7.1</version>
+          <version>${pmd.plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -427,16 +428,21 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-changes-plugin</artifactId>
-            <version>2.6</version>
+            <version>2.7.1</version>
             <configuration>
               <template>announcement.vm</template>
               <templateDirectory>src/changes</templateDirectory>
               <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
               <outputDirectory>.</outputDirectory>
               <announcementFile>RELEASE-NOTES.txt</announcementFile>
-              <announcementParameters>
+              <issueManagementSystems>
+                <issueManagementSystem>changes.xml</issueManagementSystem>
+                <issueManagementSystem>JIRA</issueManagementSystem>
+              </issueManagementSystems>
+              <version>${Log4jReleaseVersion}</version>
+              <announceParameters>
                 <releaseVersion>${Log4jReleaseVersion}</releaseVersion>
-              </announcementParameters>
+              </announceParameters>
             </configuration>
             <executions>
               <execution>
