--- a/slf4j-impl/pom.xml
+++ b/slf4j-impl/pom.xml
@@ -158,6 +158,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-pmd-plugin</artifactId>
+            <version>${pmd.plugin.version}</version>
             <configuration>
               <targetJdk>1.5</targetJdk>
             </configuration>
