Add relative path to parent pom
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1361610 13f79535-47bb-0310-9956-ffa450edef68

--- a/flume-og/pom.xml
+++ b/flume-og/pom.xml
@@ -22,6 +22,7 @@
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
     <version>2.0-alpha1-SNAPSHOT</version>
+    <relativePath>../</relativePath>
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-flume-og</artifactId>
