Fix file heading on ResolverUtil. Add trademark statement to page footings
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1363826 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j12-api/pom.xml
+++ b/log4j12-api/pom.xml
@@ -88,6 +88,8 @@
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>2.8</version>
             <configuration>
+              <bottom>Copyright &#169; {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved. Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, and the
+                Apache Logging project logo are trademarks of The Apache Software Foundation.</bottom>
               <!-- module link generation is completely broken in the javadoc plugin for a multi-module non-aggregating
                    project -->
               <detectOfflineLinks>false</detectOfflineLinks>
