Fix footer and sidebar formatting
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1364214 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,8 @@
           <moduleExcludes>
             <xdoc>navigation.xml,changes.xml</xdoc>
           </moduleExcludes>
+          <templateDirectory>${log4j.parent.dir}/src/site</templateDirectory>
+          <template>site.vm</template>
         </configuration>
       </plugin>
       <!-- <plugin>
