Change heading of project documentation for each component
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1364224 13f79535-47bb-0310-9956-ffa450edef68

--- a/flume-ng/pom.xml
+++ b/flume-ng/pom.xml
@@ -29,7 +29,8 @@
   <name>Log4J Flume NG</name>
   <description>Log4j 2.0 Flume Appender</description>
   <properties>
-    <log4j.parent.dir>${basedir}/..</log4j.parent.dir>
+    <log4jParentDir>${basedir}/..</log4jParentDir>
+    <docLabel>Flume Documentation</docLabel>
   </properties>
   <dependencies>
     <dependency>
@@ -107,11 +108,11 @@
         <version>2.7</version>
         <configuration>
           <!--<propertiesLocation>${vfs.parent.dir}/checkstyle.properties</propertiesLocation> -->
-          <configLocation>${log4j.parent.dir}/checkstyle.xml</configLocation>
-          <suppressionsLocation>${log4j.parent.dir}/checkstyle-suppressions.xml</suppressionsLocation>
+          <configLocation>${log4jParentDir}/checkstyle.xml</configLocation>
+          <suppressionsLocation>${log4jParentDir}/checkstyle-suppressions.xml</suppressionsLocation>
           <enableRulesSummary>false</enableRulesSummary>
           <propertyExpansion>basedir=${basedir}</propertyExpansion>
-          <propertyExpansion>licensedir=${log4j.parent.dir}/checkstyle-header.txt</propertyExpansion>
+          <propertyExpansion>licensedir=${log4jParentDir}/checkstyle-header.txt</propertyExpansion>
         </configuration>
       </plugin>
       <plugin>
