--- a/api/pom.xml
+++ b/api/pom.xml
@@ -29,7 +29,8 @@
   <name>Log4J API</name>
   <description>The Log4J API</description>
   <properties>
-    <log4j.parent.dir>${basedir}/..</log4j.parent.dir>
+    <log4jParentDir>${basedir}/..</log4jParentDir>
+    <docLabel>API Documentation</docLabel>
   </properties>
   <dependencies>
     <dependency>
@@ -68,11 +69,11 @@
         <version>2.7</version>
         <configuration>
           <!--<propertiesLocation>${vfs.parent.dir}/checkstyle.properties</propertiesLocation> -->
-          <configLocation>${log4j.parent.dir}/checkstyle.xml</configLocation>
-          <suppressionsLocation>${log4j.parent.dir}/checkstyle-suppressions.xml</suppressionsLocation>
+          <configLocation>${log4jParentDir}/checkstyle.xml</configLocation>
+          <suppressionsLocation>${log4jParentDir}/checkstyle-suppressions.xml</suppressionsLocation>
           <enableRulesSummary>false</enableRulesSummary>
           <propertyExpansion>basedir=${basedir}</propertyExpansion>
-          <propertyExpansion>licensedir=${log4j.parent.dir}/checkstyle-header.txt</propertyExpansion>
+          <propertyExpansion>licensedir=${log4jParentDir}/checkstyle-header.txt</propertyExpansion>
         </configuration>
       </plugin>
       <plugin>
@@ -120,7 +121,7 @@
         <configuration>
           <threshold>Normal</threshold>
           <effort>Default</effort>
-          <excludeFilterFile>${log4j.parent.dir}/findbugs-exclude-filter.xml</excludeFilterFile>
+          <excludeFilterFile>${log4jParentDir}/findbugs-exclude-filter.xml</excludeFilterFile>
         </configuration>
       </plugin>
       <plugin>
