--- a/jcl-bridge/pom.xml
+++ b/jcl-bridge/pom.xml
@@ -31,7 +31,8 @@
   <name>Log4J Commons Logging</name>
   <description>Log4j 2.0 Commons Logging Adapter</description>
   <properties>
-    <log4j.parent.dir>${basedir}/..</log4j.parent.dir>
+    <log4jParentDir>${basedir}/..</log4jParentDir>
+    <docLabel>JCL Bridge Documentation</docLabel>
   </properties>
   <dependencies>
      <dependency>
@@ -79,11 +80,11 @@
             <version>2.7</version>
             <configuration>
               <!--<propertiesLocation>${vfs.parent.dir}/checkstyle.properties</propertiesLocation> -->
-              <configLocation>${log4j.parent.dir}/checkstyle.xml</configLocation>
-              <suppressionsLocation>${log4j.parent.dir}/checkstyle-suppressions.xml</suppressionsLocation>
+              <configLocation>${log4jParentDir}/checkstyle.xml</configLocation>
+              <suppressionsLocation>${log4jParentDir}/checkstyle-suppressions.xml</suppressionsLocation>
               <enableRulesSummary>false</enableRulesSummary>
               <propertyExpansion>basedir=${basedir}</propertyExpansion>
-              <propertyExpansion>licensedir=${log4j.parent.dir}/checkstyle-header.txt</propertyExpansion>
+              <propertyExpansion>licensedir=${log4jParentDir}/checkstyle-header.txt</propertyExpansion>
             </configuration>
           </plugin>
           <plugin>
