Fix project directory svn links.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1366679 13f79535-47bb-0310-9956-ffa450edef68

--- a/flume-ng/pom.xml
+++ b/flume-ng/pom.xml
@@ -31,6 +31,7 @@
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Flume Documentation</docLabel>
+    <projectDir>/flume-ng</projectDir>
   </properties>
   <dependencies>
     <dependency>
