--- a/api/pom.xml
+++ b/api/pom.xml
@@ -31,6 +31,7 @@
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>API Documentation</docLabel>
+    <projectDir>/api</projectDir>
   </properties>
   <dependencies>
     <dependency>
