--- a/core/pom.xml
+++ b/core/pom.xml
@@ -31,6 +31,7 @@
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Core Documentation</docLabel>
+    <projectDir>/core</projectDir>
   </properties>
   <dependencies>
     <dependency>
