--- a/jcl-bridge/pom.xml
+++ b/jcl-bridge/pom.xml
@@ -33,6 +33,7 @@
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>JCL Bridge Documentation</docLabel>
+    <projectDir>/jcl-bridge</projectDir>
   </properties>
   <dependencies>
      <dependency>
