--- a/log4j12-api/pom.xml
+++ b/log4j12-api/pom.xml
@@ -31,6 +31,7 @@
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Log4j 1.2 Documentation</docLabel>
+    <projectDir>/log4j12-api</projectDir>
   </properties>
   <dependencies>
     <dependency>
