--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
     <maven.compile.source>1.5</maven.compile.source>
     <maven.compile.target>1.5</maven.compile.target>
     <docLabel>Site Documentation</docLabel>
+    <projectDir></projectDir>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -362,9 +363,26 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <version>2.4</version>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>index</report>
+              <report>dependencies</report>
+              <report>dependency-convergence</report>
+              <report>dependency-management</report>
+              <report>project-team</report>
+              <report>mailing-list</report>
+              <report>issue-tracking</report>
+              <report>license</report>
+              <report>scm</report>
+              <report>summary</report>
+            </reports>
+          </reportSet>
+        </reportSets>
         <configuration>
-          <webAccessUrl>https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk</webAccessUrl>
-          <developerConnection>scm:svn:https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk</developerConnection>
+          <webAccessUrl>https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk${projectDir}</webAccessUrl>
+          <anonymousConnection>scm:svn:http://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk${projectDir}</anonymousConnection>
+          <developerConnection>scm:svn:https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk${projectDir}</developerConnection>
         </configuration>
       </plugin>
       <!-- Surefire report -->
