Fix FLUME-69, Allow Flume agent to be embedded into the Flume appender.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1374701 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,11 @@
         <artifactId>log4j-jcl</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j12-api</artifactId>
+        <version>${project.version}</version>
+      </dependency>
  	    <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
