Create release noets
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1376802 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -478,7 +478,7 @@
               <announcementFile>RELEASE-NOTES.txt</announcementFile>
               <issueManagementSystems>
                 <issueManagementSystem>changes.xml</issueManagementSystem>
-                <issueManagementSystem>JIRA</issueManagementSystem>
+                <!--<issueManagementSystem>JIRA</issueManagementSystem> -->
               </issueManagementSystems>
               <version>${Log4jReleaseVersion}</version>
               <announceParameters>
