Add moi to developers list.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1395131 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
       <email>rgoers@apache.org</email>
       <organization>Intuit Financial Services</organization>
     </developer>
+    <developer>
+      <id>ggregory</id>
+      <name>Gary Greory</name>
+      <email>ggregory@apache.org</email>
+      <organization>Rocket Software</organization>
+    </developer>
   </developers>
   <mailingLists>
     <mailingList>
