Fix a typo in my name.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1395137 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     </developer>
     <developer>
       <id>ggregory</id>
-      <name>Gary Greory</name>
+      <name>Gary Gregory</name>
       <email>ggregory@apache.org</email>
       <organization>Rocket Software</organization>
     </developer>
