Eliminate duplicate NOTICE files. Cause NOTICE files to contain proper component names
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1395162 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -26,7 +26,7 @@
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-api</artifactId>
   <packaging>jar</packaging>
-  <name>Log4J API</name>
+  <name>Apache Log4j API</name>
   <description>The Log4J API</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
