--- a/flume-ng/pom.xml
+++ b/flume-ng/pom.xml
@@ -26,7 +26,7 @@
   <groupId>org.apache.logging.log4j.adapters</groupId>
   <artifactId>log4j-flume-ng</artifactId>
   <packaging>jar</packaging>
-  <name>Log4J Flume NG</name>
+  <name>Apache Log4j Flume NG Bridge</name>
   <description>Log4j 2.0 Flume Appender</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
