The POM name was not prefixed with "Apache": "Log4J Core" -> "Apache Log4J Core". Fix a typo in the description: "Log4 Implementation." -> "Apache Log4J Implementation."
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1397241 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,8 +26,8 @@
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-core</artifactId>
   <packaging>jar</packaging>
-  <name>Log4J Core</name>
-  <description>Log4 Implementation.</description>
+  <name>Apache Log4J Core</name>
+  <description>Apache Log4J Implementation.</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Core Documentation</docLabel>
