Add the Apache SNAPSHOT repository in order to download http://repository.apache.org/snapshots/org/apache/maven/plugins/maven-pdf-plugin/1.2-SNAPSHOT/
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1405623 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
     <docLabel>Site Documentation</docLabel>
     <projectDir />
   </properties>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>apache.snapshots</id>
+      <url>http://repository.apache.org/snapshots/</url>
+    </pluginRepository>
+  </pluginRepositories>
   <dependencyManagement>
     <dependencies>
       <dependency>
