Fix issues in pdf generation
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1407215 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,10 @@
       <id>apache.snapshots</id>
       <url>http://repository.apache.org/snapshots/</url>
     </pluginRepository>
+    <pluginRepository>
+      <id>maven.snapshots</id>
+      <url>https://repository.apache.org/content/repositories/maven-018/</url>
+    </pluginRepository>
   </pluginRepositories>
   <dependencyManagement>
     <dependencies>
@@ -366,7 +370,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pdf-plugin</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2</version>
         <executions>
           <execution>
             <id>pdf</id>
@@ -503,7 +507,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-pdf-plugin</artifactId>
-            <version>1.2-SNAPSHOT</version>
+            <version>1.2</version>
             <executions>
               <execution>
                 <id>pdf</id>
